--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Infrasound/\[Infrasound\] ffmpeg-master-latest-win64-gpl.zip
 Infrasound/ffmpeg-master-latest-win64-gpl.zip
 Infrasound/infrasound.py
 Infrasound/msza.m4a
+W i spacja w grach_v2.py
+W i spacja w grach_v2.py
