--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Infrasound/infrasound.py
 Infrasound/msza.m4a
 W i spacja w grach_v2.py
 W i spacja w grach_v2.py
+W i spacja w grach_v2.py.bak
+W i spacja w grach_v2.py
